# quantsdk

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
api/: index.html
api/backend/: index.html
api/circuit/: index.html
api/cloud-api/: index.html
api/gates/: index.html
api/interop/: index.html
api/result/: index.html
api/router/: index.html
backends/: index.html
backends/custom-backend/: index.html
backends/ibm-quantum/: index.html
backends/local-simulator/: index.html
changelog/: index.html
contributing/: index.html
docs/: CNAME  contributing.md  index.md
docs/api/: backend.md  circuit.md  cloud-api.md  gates.md  index.md  interop.md  result.md  router.md
docs/backends/: custom-backend.md  ibm-quantum.md  index.md  local-simulator.md
docs/examples/: index.md
docs/getting-started/: cloud-quickstart.md  first-circuit.md  index.md  installation.md  quickstart.md  real-hardware.md
docs/tutorials/: 01-bell-state.md  02-teleportation.md  03-deutsch-jozsa.md  04-bernstein-vazirani.md  05-simons-algorithm.md  06-grovers-search.md  07-qft.md  08-vqe.md  09-qaoa.md  10-hybrid-algorithms.md  index.md
examples/: 01_hello_quantum.ipynb  02_bell_states.ipynb  03_ghz_state.ipynb  04_single_qubit_gates.ipynb  05_multi_qubit_gates.ipynb  06_circuit_inspection.ipynb  07_results_visualization.ipynb  08_teleportation.ipynb  09_deutsch_jozsa.ipynb  10_bernstein_vazirani.ipynb  11_simons_algorithm.ipynb  12_grovers_search.ipynb  13_qft.ipynb  14_phase_estimation.ipynb  15_vqe.ipynb  16_qaoa_maxcut.ipynb  17_quantum_ml.ipynb  18_hybrid_algorithms.ipynb  19_qiskit_interop.ipynb  20_openqasm_interop.ipynb  21_backend_comparison.ipynb  22_advanced_gates.ipynb  README.md  index.html
getting-started/: index.html
getting-started/cloud-quickstart/: index.html
getting-started/first-circuit/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/real-hardware/: index.html
scripts/: check_secrets.py
search/: search_index.json
src/quantsdk/: __init__.py  backend.py  circuit.py  gates.py  result.py  router.py  runner.py
src/quantsdk/backends/: __init__.py  ibm.py  ionq.py
src/quantsdk/cloud/: __init__.py  config.py
stylesheets/: extra.css
tests/: test_aer_backend.py  test_api_surface.py  test_circuit.py  test_cirq_interop.py  test_cloud.py  test_coverage_boost.py  test_expanded_gates.py  test_gates.py  test_gpu_simulator.py  test_ionq_backend.py  test_openqasm.py  test_pennylane_interop.py  test_qiskit_interop.py  test_router.py  test_simulator.py
tutorials/: index.html
tutorials/01-bell-state/: index.html
tutorials/02-teleportation/: index.html
tutorials/03-deutsch-jozsa/: index.html
tutorials/04-bernstein-vazirani/: index.html
tutorials/05-simons-algorithm/: index.html
tutorials/06-grovers-search/: index.html
tutorials/07-qft/: index.html
tutorials/08-vqe/: index.html
tutorials/09-qaoa/: index.html
tutorials/10-hybrid-algorithms/: index.html
(+8 files in other folders)
