[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thequantsdk"
version = "0.1.0"
description = "Write quantum code once, run anywhere. A framework-agnostic quantum computing SDK."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "TheQuantAI", email = "team@thequantai.in" },
]
keywords = [
    "quantum",
    "quantum-computing",
    "qiskit",
    "cirq",
    "pennylane",
    "sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Backend adapters (install only what you need)
ibm = ["qiskit>=1.0", "qiskit-ibm-runtime>=0.20"]
ionq = ["amazon-braket-sdk>=1.70"]
gpu = ["qiskit-aer>=0.14"]

# Framework interop
interop = ["qiskit>=1.0", "cirq-core>=1.3", "pennylane>=0.35"]

# Visualization
viz = ["matplotlib>=3.7"]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# Documentation
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

# All optional deps
all = ["thequantsdk[ibm,ionq,gpu,interop,viz,dev,docs]"]

[project.urls]
Homepage = "https://thequantcloud.com"
Documentation = "https://docs.thequantcloud.com"
Repository = "https://github.com/TheQuantAI/quantsdk"
Issues = "https://github.com/TheQuantAI/quantsdk/issues"
Changelog = "https://github.com/TheQuantAI/quantsdk/blob/main/CHANGELOG.md"

# ─── Tool Configuration ───

[tool.hatch.build.targets.sdist]
include = [
    "src/quantsdk/",
    "tests/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantsdk"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["quantsdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # allow assert in non-test code (used for type narrowing)
